<resources>
    <string name="app_name">Tourism</string>
    <string name="y_des"> <b>Yamunotri </b>Temple lies in the western Garhwal Himalayas at an elevation of about 3,291mts.The majestic mountains, mesmerizing springs of Surya Kund and Gouri Kund  flowing hot and cold water respectively,and River Yamuna flowing gracefully provides a tranquil-filled atmosphere around Yamunotri temple.People believes that on “Akshaya Tritiya” ,the goddess comes back to grace Yamunotri again. So, that the both closing and opening ceremonies of the Yamunotri shrine are brought about with celebrations .
 </string>
    <string name="KHARSALIDES">• <b>Kharsali </b>is a quaint Himalayan village which is about 8km from Yamunotri.There is an Untouched village of Kharsali also known as “KHUSHIMATH” which is cradled with love in the Uttarkashi district of Uttarkhand.We can walk around and explore the village at our steps.Since the Yamunotri Shrine becomes inaccessible in winters ,due to heavy snowfall.So,that the deity is brought here for worshipping.
    </string>
    <string name="hanu">
        •	<b>Hanuman Chatti </b> is located at the confluence of the Hanuman Ganga and Yamuna rivers.It is located at the Distance of 13kms from Yamunotri.Hanuman Chatti is nestled in the Himalayas and surrounded by the dense forests.The riverside scenic beauty at Hanuman Chatti acts as a Perfect place to experience nature and the Countryside.It is mostly frequented by the travlers because it is a popular trekking spot in the region.
    </string>
    <string name="gangotrides">
<b>Gangotri Dham</b>, located at the height of 3,100 meters on the Himalayan range in Uttarkashi district of Uttarakhand, one of the char dhams (the most sacred pilgrimage circuits in northern India with four holy destinations), Gangotri, in Uttarkashi, is a small town with the temple of Goddess Ganga at its heart. It holds a very special place in the hearts of Hindus. Amongst all the natural beauty and grace which the mountains and altitude of the place affords, what makes Gangotri one of the holiest places is its familiar connection with River Ganga (the Ganges). Gangotri offers stunning views all around.
    </string>
    <string name="kedarnath">
<b>O</b>ne of the most revered temple destinations of India, Kedarnath town is nestled in the mighty Garhwal Himalayas .It is located in the Rudraprayag district of Uttarkhand, is one of the most paramount locations for worshipers of Lord Shiva. It is an uphill trek for about 22 kilometers from Gauri kund.  A Conical rock formation inside the temple is worshipped as Lord Shiva in his “Sadashiva” form.
    </string>
    <string name="saptarishi">
•	Saptarshi kund is located at a distance of 10kms from Yamunotri.To reach the Saptarshi kund we need to go through an difficult Trek but the sight of the emerald blue lake is surrounded by frozen glaciers which is very impressive.This lake is also said to be the source of the rare lotus “Bhrama Kamal”.This glacier lake of a half kilometer long , is surrounded by the rocky glaciers and is fed by Champasar glacier.
    </string>
    <string name="janki">
        •	Janki Chatti is familiarly known for its Hot water Springs. It is situated at an elevation of 2,650 mts above sea level and it is also popular for its natural splendour.It is located at the distance of 6kms from Yamunotri which is totally surrounded by the high mountains at all sides.
    </string>
    <string name="bad_des">
        The Badrinath Temple also known as the Badrinarayan Temple, located in Uttarakhand Badrinath town. Badrinath is sacred to Lord Vishnu, particularly in Vishnu dual form of Nara-Narayana. It is one of the four Char Dhams (four important pilgrimages) in the state. Badrinath temple was re-established by “Adi Shankracharya” in the 8th century as part of his mission to brighten Hinduism. Badrinath is located at an altitude of around 3,100 m which is located in the Garhwal Himalayas, on the banks of the Alaknanda river.
    </string>
    <string name="gauri_kund">GAURI KUND</string>
    <string name="k_gk_des">•	Gauri Kund Temple is a temple dedicated to Goddess Parvati, also known as Gauri. It is the starting point of the 16kms Trek towards the Kedarnath . Devotees believed that this were the site where the Goddess Parvati had meditated to marry Lord Shiva. Half kilometer from Gauri Kund is the temple of “Srikata Ganesha”. As per Skanda purana, this was the place where shiva beheaded Ganesha and attached the head of an Elephant on his headless body.

</string>
    <string name="nainital">
  <b>Nainital</b> is a city and popular hill station in Nainital district of Uttarakhand, India. It is the charming Himalayan Lake town, is an attractive perfect hill-station and one of the most popular in Northern India. Nainital is located in the Kumaon foothills of the outer Himalayas and Situated at an altitude of 1,938 meters (6,358 ft) above sea level which is commonly known as the ‘Lake District’.


    </string>
    <string name="RISHII">
<b>Rishikesh</b> is a tehsil located in Uttarakhand’s Tehri Garhwal region right on the banks of the holiest of Indian rivers, the Ganges. Rishikesh is also known for its connection with The Beatles. Rishikesh is also a town of quaint cafes, which offer local and international cuisines and are mostly packed with tourists.Interestingly, in the last couple of years, Rishikesh has become very popular for its vibrant Holi celebrations, mostly organised by private hotels and resorts
    </string>
    <string name="gaurikund"><b>Gauri Kund </b>Temple is a temple dedicated to Goddess Parvati, also known as Gauri. It is the starting point of the 16kms Trek towards the Kedarnath . Devotees believed that this were the site where the Goddess Parvati had meditated to marry Lord Shiva. Half kilometer from Gauri Kund is the temple of “Srikata Ganesha”. As per Skanda purana, this was the place where shiva beheaded Ganesha and attached the head of an Elephant on his headless body.

</string>
    <string name="attractions">ATTRACTIONS</string>
    <string name="panch_dhara_and_panch_shila">PANCH DHARA AND PANCH SHILA</string>
    <string name="vasundara_falls">VASUNDARA FALLS</string>
    <string name="santopanth_tal">SATOPANTH TAL</string>
    <string name="hemkund_sahib">HEMKUND SAHIB</string>
    <string name="ra"> 4.Yamunothri Cottages</string>
    <string name="ja"> 2.Dayara Bugyal Sarai Homestay </string>
    <string name="kaa"> 3.Rigveda Resort Barkot </string>
    <string name="sato">

   <b> Rating</b> - 4.3(Google Ratings)  \n

 <b> Address </b> -NearHelipad,KharsaliVillage,JankiChatti,Uttarakhand <b> pincode - 249141</b>  -  \n

 <b>Contact no .</b> -08700347410\n
    <b>Property amenities</b>
Freeparking\t\tFreebreakfast\t\tRestaurant\t
Privatecheck-in/check-out\t\tLaundryservice\t

       <b>Roomfeatures</b>
Desk,\t\t
Housekeeping,\t\t
Interconnectedroomsavailable,\t\t
Seatingarea,\t\t
Clothesrack,\t\t
Bath/shower,\t\t
Complimentarytoiletries.\n


      </string>
    <string name="sa">1. Buransh Home Stay </string>
    <string name="nato">

   <b> Rating</b> - 4.5(Google Ratings)  \n

 <b> Address </b> - P.O, Village Agoda, Bhankoli, Uttarakhand <b> pincode - 249193</b>  -  \n

 <b>Contact no .</b> - 089542 97901\n
    <b>Property amenities</b>
Pool \t  \t         Parking Free  \t\t       Free Wi-Fi \t
        Private check-in / check-out  \t \t      Laundry service\t
       <b>Activities</b>
Bicycle hire , \t\t
Tennis, \t\t
Horse Riding,\t\t
Water skiing,\t\t
Boutique shopping,\t\t
Nightclub\t\t  \n\n


      </string>
    <string name="ato">

   <b> Rating</b> - 4.9(Google Ratings)  \n

 <b> Address </b> - Bhatwari, Barsu Rd, Barsu, Uttarakhand  <b>pincode</b>  -  249135\n

 <b>Contact no .</b> - 099177 28363\n
    <b>Property amenities</b>
Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t \n\n



      </string>
    <string name="bato">
\n
   <b> Rating</b> - 4.7(Google Ratings)  \n

 <b> Address </b> - Nandgaon, Barkot yamnotri road, Uttarakhand  <b>pincode</b>  -  249141\n

 <b>Contact no .</b> -  090234 80234\n
    <b>Property amenities</b>
Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t

    \n



      </string>
    <string name="B_txt4"> 4.Nk brothers homestay</string>
    <string name="B_txt2"> 2.Bagasi homestay </string>
    <string name="B_txt3"> 3.Urgam Bansi Narayan Homestay </string>
    <string name="B_ho4">

   <b> Rating</b> - 4.3(Google Ratings)  \n

 <b> Address </b> - Way, Kedarnath, Uttarakhand  <b>pincode</b>  -  246445\n

 <b>Contact no .</b> - 093059 26456\n
    <b>Property amenities</b>
Free parking \t  \t         Restaurant \t
        Private check-in / check-out  \t \t


      </string>
    <string name="B_txt1">1.BHARAT SHREE GUEST HOUSE</string>
    <string name="B_ho1">
        \n

   <b> Rating</b> - 5.0(Google Ratings)  \n

 <b> Address </b> -  Kedarnath Rd, Sersi, Uttarakhand <b> pincode - 246471</b>  -  \n

 <b>Contact no .</b> -  099976 69887\n
    <b>Property amenities</b>
      Parking Free  \t\t       Free Wi-Fi \t   Room Service \t
        Private check-in / check-out  \t \t

        \n\n





      </string>
    <string name="B_ho2">

   <b> Rating</b> - 5.0(Google Ratings)  \n

 <b> Address </b> - J39F+5W3, Chaumasi, Uttarakhand  <b>pincode</b>  -  246471\n

 <b>Contact no .</b> - 9759934535\n
    <b>Property amenities</b>
Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t \n\n




      </string>
    <string name="B_ho3">
\n\n
   <b> Rating</b> - 4.2(Google Ratings)  \n

 <b> Address </b> - Gauri Kund - Kedarnath Trekking Way, near Kedarnath Temple, Kedarnath, Uttarakhand  <b>pincode</b>  -  246445\n

 <b>Contact no .</b> - 9664625070\n
    <b>Property amenities</b>
     Front desk 24-HOUR \t \t       Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t



      </string>
    <string name="K_txt4"> 4.Mathura House Kedarnath</string>
    <string name="K_txt2"> 2.Akash Home Stay </string>
    <string name="K_txt3"> 3.Kedarnath Meerut Mandal </string>
    <string name="K_ho4">

   <b> Rating</b> - 4.3(Google Ratings)  \n

 <b> Address </b> - Way, Kedarnath, Uttarakhand  <b>pincode</b>  -  246445\n

 <b>Contact no .</b> - 093059 26456\n
    <b>Property amenities</b>
Free parking \t  \t         Restaurant \t
        Private check-in / check-out  \t \t


      </string>
    <string name="K_txt1">1. Trilochanis home stay</string>
    <string name="K_ho1">
        \n

   <b> Rating</b> - 5.0(Google Ratings)  \n

 <b> Address </b> -  Kedarnath Rd, Sersi, Uttarakhand <b> pincode - 246471</b>  -  \n

 <b>Contact no .</b> -  099976 69887\n
    <b>Property amenities</b>
      Parking Free  \t\t       Free Wi-Fi \t   Room Service \t
        Private check-in / check-out  \t \t

        \n\n





      </string>
    <string name="K_ho2">

   <b> Rating</b> - 5.0(Google Ratings)  \n

 <b> Address </b> - J39F+5W3, Chaumasi, Uttarakhand  <b>pincode</b>  -  246471\n

 <b>Contact no .</b> - 9759934535\n
    <b>Property amenities</b>
Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t \n\n




      </string>
    <string name="K_ho3">
\n\n
   <b> Rating</b> - 4.2(Google Ratings)  \n

 <b> Address </b> - Gauri Kund - Kedarnath Trekking Way, near Kedarnath Temple, Kedarnath, Uttarakhand  <b>pincode</b>  -  246445\n

 <b>Contact no .</b> - 9664625070\n
    <b>Property amenities</b>
     Front desk 24-HOUR \t \t       Free parking \t  \t         Room service  \t\t       Restaurant \t
        Private check-in / check-out  \t \t      Laundry service\t



      </string>
</resources>