<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".badri_att">

    <TextView
        android:id="@+id/textView"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/attractions"
        android:textColor="#1032EC"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="196dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bdr_att_vsdhrfal"
        android:contentDescription="@string/vasundara_falls" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="opeenAct1"
        android:text="@string/vasundara_falls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="194dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bdr_att_sntl"
        android:contentDescription="@string/santopanth_tal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:onClick="opeenAct2"
        android:text="@string/santopanth_tal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="186dp"
        android:layout_height="198dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/bdr_att_pnd"
        android:contentDescription="@string/panch_dhara_and_panch_shila" />

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:onClick="opeenAct3"
        android:text="@string/panch_dhara_and_panch_shila"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.102" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="178dp"
        android:layout_height="199dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@drawable/bdr_att_hs"
        android:contentDescription="@string/hemkund_sahib" />

    <Button
        android:id="@+id/button4"
        android:layout_width="143dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        android:onClick="opeenAct4"
        android:text="@string/hemkund_sahib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

</androidx.constraintlayout.widget.ConstraintLayout>